Pullquote: Ensure spacing consistency between editor and frontend
- Added `display: block` to the `.wp-block-pullquote cite` element to align spacing between the editor and the frontend.
- Removed the redundant `color: inherit` CSS rule from `.wp-block-pullquote cite`.

--- a/packages/block-library/src/pullquote/style.scss
+++ b/packages/block-library/src/pullquote/style.scss
@@ -11,6 +11,10 @@
 		color: inherit;
 	}
 
+	cite {
+		display: block;
+	}
+
 	blockquote {
 		margin: 0;
 	}
@@ -68,8 +72,4 @@
 			font-style: normal;
 		}
 	}
-}
-
-.wp-block-pullquote cite {
-	color: inherit;
 }
